[KMT] Fixed height of button

--- a/komunat/src/app/home/home.page.html
+++ b/komunat/src/app/home/home.page.html
@@ -40,8 +40,7 @@
        <img class="logo" src="https://komunat.de/match.png"/>
        <h2 id="headline">Dein Ergebnis für die Wahl in Stuttgart</h2>
        <p id="text">
-         Wir vergleichen dein Ergebnis mit der Reihenfolge der KandidatInnen und zeigen dir, welche 20 der 300 KandidatInnen am besten zu dir passen.<br>
-         Mit dem Ergebnis aus dem KOMUNAT kannst du dann ganz einfach den Stimmzettel ausfüllen.
+         Wir vergleichen dein Ergebnis mit der Reihenfolge der KandidatInnen und zeigen dir, welche 20 der 300 KandidatInnen am besten zu dir passen. Mit dem Ergebnis aus dem KOMUNAT kannst du dann ganz einfach den Stimmzettel ausfüllen.
        </p>
          <ion-button (click) ="goToKomunat($event)" color="primary" expand="block" class="goBtn small-margin">Los geht's</ion-button>
          <br>
