[KMT] Added more spacing for shitty IE

--- a/komunat/src/app/komunat/komunat.page.html
+++ b/komunat/src/app/komunat/komunat.page.html
@@ -1,7 +1,7 @@
 <div class="container">
-        <ion-row>
+        <ion-row class="top">
                 <ion-col size="6">
-                <p>Welcher Wert ist dir wichtiger?</p>
+                <p class="middle small">Welcher Wert ist dir wichtiger?</p>
                 </ion-col>
                 <ion-col size="1">
                 </ion-col>
@@ -16,6 +16,8 @@
                           <div class="step" id="2"></div>
                         </div>
                       </div>
+                      <br><br>
+
                 </ion-col>
             </ion-row>
     <div class="buttonSection">
