--- a/komunat/src/app/komunat/komunat.page.scss
+++ b/komunat/src/app/komunat/komunat.page.scss
@@ -8,10 +8,11 @@
 ion-col {
   margin-left:10px;
   margin-top:10px;
+  justify-content: center;
 }
 
 .buttonSection {
-  height: 75vh;
+  height: 65vh;
   width: auto;
 }
 
@@ -66,14 +67,20 @@ ion-col {
     margin-bottom: 0px;
   }
 
+  .top {
+    margin-top:30px;
+  }
 
-
+  .middle {
+    top: 50%;
+    transform: translate(0, -50%);
+  }
   // PROGRESS DOTS
 .progressContainer {
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -30%);
 }
 
 .steps {
