--- a/komunat/src/app/content/content.page.html
+++ b/komunat/src/app/content/content.page.html
@@ -1,23 +1,24 @@
 <div class="container">
-        <ion-row>
-            <ion-col size="6">
-            <p>Welche Aufgabe ist dir wichtiger?</p>
-            </ion-col>
-            <ion-col size="1">
-            </ion-col>
-            <ion-col size="3">
-                <div class="progressContainer">
-                    <div class="progress">
-                      <div class="percent"></div>
-                    </div>
-                    <div class="steps">
-                      <div class="step completed" id="0"></div>
-                      <div class="step selected" id="1"></div>
-                      <div class="step" id="2"></div>
-                    </div>
-                  </div>
-            </ion-col>
-        </ion-row>
+    <ion-row class="top">
+        <ion-col size="6">
+        <p class="middle small">Welche Aufgabe ist dir wichtiger?</p>
+        </ion-col>
+        <ion-col size="1">
+        </ion-col>
+        <ion-col size="3">
+            <div class="progressContainer">
+                <div class="progress">
+                  <div class="percent"></div>
+                </div>
+                <div class="steps">
+                  <div class="step selected" id="0"></div>
+                  <div class="step" id="1"></div>
+                  <div class="step" id="2"></div>
+                </div>
+              </div>
+              <br><br>
+        </ion-col>
+    </ion-row>
         <div class="buttonSection">
         <ion-card class="opt0 upper" (click) ="selected(0)">
                 <h2 class=".opt0 beautify">{{this.btn0Val.name}}</h2>
