[KMT] Added fixes for spacing in content

--- a/komunat/src/app/content/content.page.html
+++ b/komunat/src/app/content/content.page.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <ion-row class="top">
+    <ion-row class="topContent">
         <ion-col size="6">
         <p class="middle small">Welche Aufgabe ist dir wichtiger?</p>
         </ion-col>
