[KMT] Fixed some spaces

--- a/komunat/src/app/cdetail/cdetail.page.html
+++ b/komunat/src/app/cdetail/cdetail.page.html
@@ -3,7 +3,7 @@
   <div class="container">
     <ion-row class="titleBar">
         <ion-col size="10">
-        <p class="mainLbl" (click)="back()">< DEIN TEAM</p>
+        <ion-button expand="block" fill="outline" class="center" (click)="back()"><ion-icon name="arrow-round-back"></ion-icon>Zurück</ion-button>
         <p hidden class="backBtn" name="filing" (click) = "back()">< DEIN TEAM</p>
         </ion-col>
 
