--- a/komunat/src/app/content/content.page.html
+++ b/komunat/src/app/content/content.page.html
@@ -21,10 +21,10 @@
     </ion-row>
         <div class="buttonSection">
         <ion-card class="opt0 upper" (click) ="selected(0)">
-                <h2 class=".opt0 beautify">{{this.btn0Val.name}}</h2>
+                <h2 class=".opt0 beautify small">{{this.btn0Val.name}}</h2>
         </ion-card>
         <ion-card class="opt1 lower"  (click) ="selected(1)">
-                  <h2 class=".opt1 beautify">{{this.btn1Val.name}}</h2>
+                  <h2 class=".opt1 beautify small">{{this.btn1Val.name}}</h2>
           </ion-card>
         </div>
     </div>
