--- a/komunat/src/app/content/content.page.scss
+++ b/komunat/src/app/content/content.page.scss
@@ -74,8 +74,12 @@ ion-col {
     margin-bottom: 0px;
   }
 
-  .top {
+  .topContent {
     margin-top:30px;
+  }
+
+  .small {		
+    font-size:5vw;		
   }
 
   .middle {
