[KMT] Added some fixes and default images

--- a/komunat/src/app/cdetail/cdetail.page.html
+++ b/komunat/src/app/cdetail/cdetail.page.html
@@ -2,11 +2,9 @@
 
   <div class="container">
     <ion-row class="titleBar">
-        <ion-col size="10">
-        <ion-button expand="block" fill="outline" class="center" (click)="back()"><ion-icon name="arrow-round-back"></ion-icon>Zurück</ion-button>
-        <p hidden class="backBtn" name="filing" (click) = "back()">< DEIN TEAM</p>
+        <ion-col size="12">
+        <ion-button expand="block" fill="outline" class="" (click)="back()"><ion-icon name="arrow-round-back"></ion-icon>Zurück</ion-button>
         </ion-col>
-
     </ion-row>
     <div class="candidateCard" ng-model="candidate">
       <ion-row class="fullHeight">
