--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -42,7 +42,7 @@
         <ion-col class="fullHeight" size="3">
           <div class="cCardLeft">
               <ion-avatar>
-                  <img-loader src="https://komunat.de/uploads/{{match.uuid}}.png" fallbackUrl="https://komunat.de/avatar.png" useImg></img-loader>
+                <img src="https://komunat.de/uploads/{{match.uuid}}.png" onError="this.src='https://komunat.de/avatar.png'"/>
                 </ion-avatar>
           </div>
         </ion-col>
@@ -146,8 +146,8 @@
         <ion-col class="fullHeight" size="3">
           <div class="cCardLeft">
               <ion-avatar>
-                  <img-loader src="https://komunat.de/uploads/{{match.uuid}}.png" fallbackUrl="https://komunat.de/avatar.png" useImg></img-loader>
-                </ion-avatar>
+                <img src="https://komunat.de/uploads/{{match.uuid}}.png" onError="this.src='https://komunat.de/avatar.png'"/>
+              </ion-avatar>
           </div>
         </ion-col>
         <ion-col size="1">
@@ -260,7 +260,7 @@
               <ion-col class="fullHeight" size="3">
                 <div class="cCardLeft">
                     <ion-avatar>
-                        <img-loader src="https://komunat.de/uploads/{{s.uuid}}.png" fallbackUrl="https://komunat.de/avatar.png" useImg></img-loader>
+                        <img src="https://komunat.de/uploads/{{s.uuid}}.png" onError="this.src='https://komunat.de/avatar.png'"/>
                       </ion-avatar>
                 </div>
               </ion-col>
