[KMT] Fixed share page

--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -389,9 +389,8 @@
 </div>
 
 <ion-footer padding *ngIf="NO_TUTORIAL==true">
-    <h1 (click)="showEmailSend()" class="footer">Ergebnis herunterladen</h1>
+    <h1 (click)="showEmailSend()" class="footer">Fertig! </h1>
 </ion-footer>
-
 </ion-content>
 
 
