--- a/komunat/src/app/matches/matches.page.scss
+++ b/komunat/src/app/matches/matches.page.scss
@@ -303,3 +303,15 @@ You can also target devices with aspect ratio. */
 }
 
 
+.finishIcon {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 40px;
+ }
+ 
+ .finishText{
+   display: inline-block;
+   vertical-align: middle;
+ }
+
+
