[KOMUNAT] Fixed some image references

--- a/komunat/src/app/app.component.html
+++ b/komunat/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-toolbar>
       <ion-buttons slot="primary"> </ion-buttons>
       <ion-title
-        ><img class="logo" src="http://localhost:8100/assets/img/logo.png"
+        ><img class="logo" src="https://demo.komunat.de/assets/img/logo.png"
       /></ion-title>
       <ion-buttons slot="end">
         <ion-menu-button class="menu" autoHide="false"></ion-menu-button>
