--- a/komunat/src/app/cdetail/cdetail.page.html
+++ b/komunat/src/app/cdetail/cdetail.page.html
@@ -12,7 +12,7 @@
         <ion-col size="5" class="imageCol">
           <div class="cCardLeft">
             <ion-avatar>
-              <img src="http://localhost:8100/assets/img/avatar.png" />
+              <img src="https://demo.komunat.de/assets/img/avatar.png" />
             </ion-avatar>
           </div>
         </ion-col>
