--- a/komunat/src/app/home/home.page.html
+++ b/komunat/src/app/home/home.page.html
@@ -2,7 +2,7 @@
   <ion-slides zoom="false" pager="true">
     <ion-slide>
       <div class="swiper">
-        <img class="logo" src="http://localhost:8100/start.png" />
+        <img class="logo" src="https://demo.komunat.de/assets/img/start.png" />
         <h2 id="headline">Dein Team für den Stuttgarter Gemeinderat!</h2>
         <p id="text">
           <!--<span *ngIf="resultLength > 0">Schon <b>{{resultLength}}</b> haben mitgemacht.</span>-->
@@ -22,7 +22,10 @@
     </ion-slide>
     <ion-slide>
       <div class="swiper">
-        <img class="logo" src="http://localhost:8100/values_contents.png" />
+        <img
+          class="logo"
+          src="https://demo.komunat.de/assets/img/values_contents.png"
+        />
         <h2 id="headline">Was ist den KandidatInnen wichtig?</h2>
         <p id="text">
           Über 300 KandidatInnen haben mithilfe des KOMUNAT ihre Werte und
@@ -40,7 +43,10 @@
     </ion-slide>
     <ion-slide>
       <div class="swiper">
-        <img class="logo" src="https://komunat.de/values_contents.png" />
+        <img
+          class="logo"
+          src="https://demo.komunat.de/assets/img/values_contents.png"
+        />
         <h2 id="headline">Und jetzt du!</h2>
         <p id="text">
           Mache das gleiche Spiel wie die KandidatInnen: Finde ganz einfach
@@ -58,7 +64,7 @@
     </ion-slide>
     <ion-slide>
       <div class="swiper">
-        <img class="logo" src="https://komunat.de/match.png" />
+        <img class="logo" src="https://demo.komunat.de/assets/img/match.png" />
         <h2 id="headline">Dein Ergebnis für die Wahl in Stuttgart</h2>
         <p id="text">
           Wir vergleichen dein Ergebnis mit der Reihenfolge der KandidatInnen
