--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -51,7 +51,7 @@
                 <ion-avatar>
                   <img
                     src="https://komunat.de/uploads/{{match.uuid}}.png"
-                    onError="this.src='http://localhost:8100/assets/img/avatar.png'"
+                    onError="this.src='https://demo.komunat.de/assets/img/avatar.png'"
                   />
                 </ion-avatar>
               </div>
@@ -207,7 +207,7 @@
                 <ion-avatar>
                   <img
                     src="https://komunat.de/uploads/{{match.uuid}}.png"
-                    onError="this.src='http://localhost:8100/assets/img/avatar.png'"
+                    onError="this.src='https://demo.komunat.de/assets/img/avatar.png'"
                   />
                 </ion-avatar>
               </div>
@@ -371,7 +371,7 @@
                 <ion-avatar>
                   <img
                     src="https://komunat.de/uploads/{{s.uuid}}.png"
-                    onError="this.src='http://localhost:8100/assets/img/avatar.png'"
+                    onError="this.src='https://demo.komunat.de/assets/img/avatar.png'"
                   />
                 </ion-avatar>
               </div>
