[KOMUNAT] Added HDM demo data part2

--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -51,7 +51,7 @@
                 <ion-avatar>
                   <img
                     src="https://komunat.de/uploads/{{match.uuid}}.png"
-                    onError="this.src='https://demo.komunat.de/assets/img/avatar.png'"
+                    onError="this.src='https://demo.komunat.de/assets/img/{{match.image}}.png'"
                   />
                 </ion-avatar>
               </div>
