[KOMUNAT] Added HDM demo data part2

--- a/komunat/src/app/matches/matches.page.html
+++ b/komunat/src/app/matches/matches.page.html
@@ -50,8 +50,8 @@
               <div class="cCardLeft">
                 <ion-avatar>
                   <img
-                    src="https://komunat.de/uploads/{{match.uuid}}.png"
-                    onError="this.src='https://demo.komunat.de/assets/img/{{match.image}}.png'"
+                    src="https://demo.komunat.de/assets/img/{{match.image}}"
+                    onError="this.src='https://demo.komunat.de/assets/img/avatar.png'"
                   />
                 </ion-avatar>
               </div>
@@ -206,7 +206,7 @@
               <div class="cCardLeft">
                 <ion-avatar>
                   <img
-                    src="https://komunat.de/uploads/{{match.uuid}}.png"
+                    src="https://demo.komunat.de/assets/img/{{match.image}}"
                     onError="this.src='https://demo.komunat.de/assets/img/avatar.png'"
                   />
                 </ion-avatar>
@@ -370,7 +370,7 @@
               <div class="cCardLeft">
                 <ion-avatar>
                   <img
-                    src="https://komunat.de/uploads/{{s.uuid}}.png"
+                    src="https://demo.komunat.de/assets/img/{{match.image}}"
                     onError="this.src='https://demo.komunat.de/assets/img/avatar.png'"
                   />
                 </ion-avatar>
